adding some basic content to mockup what I basically want.

--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -1,1 +1,5 @@
-<h1>Pages#resume</h1>
+<h1>Resume</h1>
+<h2>Here's a few projects I've worked on or mde entirely from stractch:</h2>
+
+<%= link_to("www.wellspringlawn.com") %>
+
