--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,7 @@
 <h1>Welcome To Josh's site!</h1>
+<br></br>
+<p>I'm a self taught RoR developer with over 650+ hours of learning/studying, I want to get hired as a Junior RoR developer please share, retweet, pull strings to help make this happen.</p>
+
+<h3>Please don't let it come to this:-)</h3>
+
+<%= image_tag("homeless.png") %>
