adding some content and two links to sites I've made or contributed to.

--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -1,5 +1,11 @@
 <h1>Resume</h1>
 <h2>Here's a few projects I've worked on or mde entirely from stractch:</h2>
 
-<%= link_to("www.wellspringlawn.com") %>
+<%= link_to "Wellspring Lawn & Landscape Website","http://www.wellspringlawn.com/" %>
+<h4>This site uses Flickr's api using the FlickRaw gem, so that the site can be updated from the field by just taking a photo using the Flickr mobile app and then clicking upload to send the image to the "Portfolio" page of the site.</h4>
+
+<h4>The site also has a "Get an Estimate Form" that when filled out sends all the uses information to Wellspring Lawn's owner.</h4>
+
+<%= link_to "Save The Tails Website", "http://www.savethetails.org/" %>
+
 
