adding more content to the resume views, and a couple links

--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -8,4 +8,13 @@
 
 <%= link_to "Save The Tails Website", "http://www.savethetails.org/" %>
 
+<h4>A website made with David Bock, Jason Wieranga and myself. Save the Tails is a pet rescue web application.</h4>
+
+<%= link_to "Joshuakemp.net", "http://www.joshuakemp.net/" %>
+
+<h4>This site, my online portfolio page is made by me.</h4>
+
+<%= link_to "Github", "https://github.com/joshuakemp1/" %>
+
+<h4>This my personal page for all the code I have committed to Github over the past year, check it out and see what other things I've done.</h4>
 
