--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -1,5 +1,6 @@
 <h1>Resume</h1>
-<h2>Here's a few projects I've worked on or mde entirely from stractch:</h2>
+<br></br>
+<h2>Here's a few projects I've worked on or made entirely from stractch:</h2>
 
 <%= link_to "Wellspring Lawn & Landscape Website","http://www.wellspringlawn.com/" %>
 <h4>This site uses Flickr's api using the FlickRaw gem, so that the site can be updated from the field by just taking a photo using the Flickr mobile app and then clicking upload to send the image to the "Portfolio" page of the site.</h4>
