--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,12 @@
-<h1>Welcome To Josh's site!</h1>
+<center><%= image_tag ("joshs_logo.jpg") %></center>
 <br></br>
 <p>I'm a self taught RoR developer with over 650+ hours of learning/studying, I want to get hired as a Junior RoR developer please share, retweet, pull strings to help make this happen.</p>
 
 <h3>Please don't let it come to this:-)</h3>
 
 <%= image_tag("homeless.png") %>
+
+<h4>Come on seriously help me out before I get desperate and I'll love you forever :-)</h4>
+
+<%= video_tag ("http://www.youtube.com/watch?v=Ilea6Pi7ZK4"), :size => "640x480" %>
+
