--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,32 +14,56 @@
 
 
 
- body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
- }
+#container {
 
- #container {
     min-height: 100%;
-    position:relative;
- }
+    position: relative;
 
- #header {
-    background: #ff0;
-    padding: 10px;
- }
-
-#body {
-    padding: 10px;
-    padding-bottom: 60px; /* Height of the footer */
 }
+
+
+
+#header {
+    background: #fff;
+    padding:10px;
+
+}
+
+#main_text {
+   padding: 0;
+   padding-bottom: 60px; /* Height of the footer */
+    
+}
+
+#logo {
+    text-align: center;
+}
+
 
 #footer {
-    position: absolute;
-    bottom: 0;
     width:100%;
-    height:60px; /* Height of the footer */
-    background: #6cf;
+    border-top: 1px solid red;
+    position: relative;
+    bottom:0;
+    left:0;
+    right: 0;
 }
+
+ a {
+
+    font-size: 1.0em;
+    color: orange;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
