--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,7 @@
 <footer>
-    <li><%= link_to "Home", "/home" %></li>
-    <li><%= link_to "About", "/about" %></li>
-    <li><%= link_to "Resume", "/resume" %></li>
+<div id="footer">
+    <%= link_to "Home", "/home" %>
+    <%= link_to "About", "/about" %>
+    <%= link_to "Resume", "/resume" %>
+</div>
 </footer>
