--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,11 +23,13 @@
 
 
 
-#header {
-    background: #fff;
-    padding:10px;
-
+body {
+    
+    margin: 0;
+    width: 100%;
+    height: 100%;
 }
+   
 
 #main_text {
    padding: 0;
@@ -40,20 +42,9 @@
 }
 
 
-#footer {
-    width:100%;
-    border-top: 1px solid red;
-    position: relative;
-    bottom:0;
-    left:0;
-    right: 0;
-}
 
- a {
 
-    font-size: 1.0em;
-    color: orange;
-}
+
 
 
 
