--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,7 +24,7 @@
 
 
 body {
-    
+
     margin: 0;
     width: 100%;
     height: 100%;
@@ -40,7 +40,9 @@ body {
 #logo {
     text-align: center;
 }
-
+ a {
+    color:#525252;
+ }
 
 
 
