--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer>
-<div id="footer">
+<div id="footer_1">
     <%= link_to "Home", "/home" %>
     <%= link_to "About", "/about" %>
     <%= link_to "Resume", "/resume" %>
