--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div id="header">   
+<div id="header_1">   
 <%= render :partial => "layouts/header" %>
 </div>
 
@@ -20,7 +20,7 @@
 
 
 <%= yield %>
-<div id="footer">
+<div id="footer_1">
 </div>
 
 <%= render :partial => "layouts/footer" %>
