--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,8 @@
 
 
 <div id="logo">
-<%= image_tag ("joshs_logo.jpg") %>
+<%= link_to image_tag("joshs_logo.jpg") %>
 </div>
-
-
-
 
 <%= yield %>
 
