--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,9 @@
 <p>I'm a self taught RoR developer with over 650+ hours of learning/studying, I want to get hired as a Junior RoR developer please share, retweet, pull strings to help make this happen.</p>
 
 <h3>Please don't let it come to this:-)</h3>
-
+<div class="center_image">
 <%= image_tag "homeless.png", {:width => 600} %>
-
+</div>
 <h4>Come on seriously help me out before I get desperate and I'll love you forever :-)</h4>
 
 
