adding thumbnail size images for 'resume' page, and styled a little

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,11 +15,13 @@
 
 
 
-div.center_image {
-     text-align: center;
-    padding-right:250px;
-    padding-left: 250px;
-}
+div.center_image{
+    text-align: center;
+    img {
+        border-radius: 20px;
+    }
+     }
+
 
 #container {
 
