--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 
 <h3>Please don't let it come to this:-)</h3>
 <div class="center_image">
-<%= image_tag "homeless.png", {:width => 600} %>
+<%= image_tag "homeless.png"  %>
 </div>
 <h4>Come on seriously help me out before I get desperate and I'll love you forever :-)</h4>
 
