--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -2,7 +2,12 @@
 <br></br>
 <h2>Here's a few projects I've worked on or made entirely from stractch:</h2>
 
-<%= link_to "Wellspring Lawn & Landscape Website","http://www.wellspringlawn.com/" %>
+<div class="center_image">
+<%= link_to image_tag("wellspringlawn_resume.jpg",{width: 250}), "http://wellspringlawn.com"  %>
+<%= link_to image_tag("wellspringlawn_resume.jpg",{width: 250}), "http://wellspringlawn.com"  %>
+<%= link_to image_tag("wellspringlawn_resume.jpg",{width: 250}), "http://wellspringlawn.com"  %>
+</div>
+
 <h4>This site uses Flickr's api using the FlickRaw gem, so that the site can be updated from the field by just taking a photo using the Flickr mobile app and then clicking upload to send the image to the "Portfolio" page of the site.</h4>
 
 <h4>The site also has a "Get an Estimate Form" that when filled out sends all the uses information to Wellspring Lawn's owner.</h4>
