--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,6 +4,8 @@
 <div class="center_image">
 <%= image_tag "homeless.png"  %>
 </div>
+
+<iframe width="420" height="315" src="http://www.youtube.com/embed/Ilea6Pi7ZK4" frameborder="0" allowfullscreen></iframe>
 <h4>Come on seriously help me out before I get desperate and I'll love you forever :-)</h4>
 
 
