adding a github image and styling the sidebar

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,7 +13,27 @@
  */
 
 
+div.sidebar_2 {
+    float:left;
+    min-width: 250px;
+    height: 600px;
 
+}
+
+
+div.sidebar {
+    float:right;
+    min-width: 250px;
+    height: 600px;
+
+}
+
+
+div.youtube {
+    text-align: center;
+
+
+}
 
 div.center_image{
     text-align: center;
