--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,26 @@
 <p>I'm a self taught RoR developer with over 650+ hours of learning/studying, I want to get hired as a Junior RoR developer please share, retweet, pull strings to help make this happen.</p>
 
 <h3>Please don't let it come to this:-)</h3>
+
+
+<div class="sidebar_2">
+
+</div>
+
+<div class="sidebar">
+    <%= image_tag "github_5.png" %>
+</div>
+
 <div class="center_image">
 <%= image_tag "homeless.png"  %>
 </div>
 
-<iframe width="420" height="315" src="http://www.youtube.com/embed/Ilea6Pi7ZK4" frameborder="0" allowfullscreen></iframe>
+<div class="youtube">
+<span style="background-color:#fdeee0;">    
+<iframe width="460" height="289" title="YouTube video player" src="http://www.youtube.com/embed/Ilea6Pi7ZK4?showinfo=0" frameborder="0" allowfullscreen></iframe>
+</div>
+
+
 <h4>Come on seriously help me out before I get desperate and I'll love you forever :-)</h4>
 
 
