--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
 <p>I'm a self taught RoR developer with over 650+ hours of learning/studying, I want to get hired as a Junior RoR developer please share, retweet, pull strings to help make this happen.</p>
+<p></p>
 
 <h3>Please don't let it come to this:-)</h3>
 
@@ -8,7 +9,8 @@
 </div>
 
 <div class="sidebar">
-    <%= image_tag "github_5.png" %>
+    <%= link_to image_tag("github_5.png"), 'email' %>
+
 </div>
 
 <div class="center_image">
