--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -3,11 +3,11 @@
 <h2>Here's a few projects I've worked on or made entirely from stractch:</h2>
 
 <div class="center_image">
-<%= link_to image_tag("wellspringlawn_resume.jpg",{width: 250}), "http://wellspringlawn.com"  %>
-<%= link_to image_tag("wellspringlawn_resume.jpg",{width: 250}), "http://wellspringlawn.com"  %>
-<%= link_to image_tag("wellspringlawn_resume.jpg",{width: 250}), "http://wellspringlawn.com"  %>
+<%= image_tag("save_the_tails.jpg",{width: 280}) %>
+<%= link_to image_tag("wellspringlawn_resume.jpg",{width: 260}), "http://wellspringlawn.com"  %>
+<%= link_to image_tag("joshua_kemp_site.jpg",{width: 320}), "http://0.0.0.0:3000/"  %>
 </div>
-
+<div id="inner_self">
 <h4>This site uses Flickr's api using the FlickRaw gem, so that the site can be updated from the field by just taking a photo using the Flickr mobile app and then clicking upload to send the image to the "Portfolio" page of the site.</h4>
 
 <h4>The site also has a "Get an Estimate Form" that when filled out sends all the uses information to Wellspring Lawn's owner.</h4>
@@ -23,4 +23,5 @@
 <%= link_to "Github", "https://github.com/joshuakemp1/" %>
 
 <h4>This my personal page for all the code I have committed to Github over the past year, check it out and see what other things I've done.</h4>
+</div>
 
