--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,15 +12,17 @@
  *= require_tree .
  */
 
+
+
 p {
     text-align: center;
     padding-right: 10%;
     padding-left: 10%;
 }
 
-h3 {
+h1,h2,h3,h4,h5,h6 {
     text-align: center;
-    
+
 }
 
 
@@ -39,10 +41,14 @@ div.sidebar {
       img {
        float:right;
        padding-right: 20px;
-    }
+   }
 }
 
 
+
+
+    
+      
 div.youtube {
     text-align: center;
 
@@ -51,6 +57,7 @@ div.youtube {
 
 div.center_image{
     text-align: center;
+    padding-bottom: 100px;
     img {
         border-radius: 20px;
     }
@@ -66,6 +73,7 @@ div.center_image{
 
 body {
 
+    background-color: #FFFFFF;
     margin: 0;
     width: 100%;
     height: 100%;
@@ -74,9 +82,18 @@ body {
 
 
  a {
-    color:#525252;
+    text-align: center;
+    color:green;
  }
 
+#inner_self {
+    padding-left: 100px;
+    padding-right: 100px;
+    a {
+    float: right;
+    color:green;
+ }
+}
 
 
 
