--- a/app/assets/stylesheets/logo.scss
+++ b/app/assets/stylesheets/logo.scss
@@ -1,6 +1,9 @@
 #logo {
+
     text-align: center;
     padding-right:250px;
     padding-left: 250px;
-  
+    img {
+         border-radius: 20px;
+    }
 }
