--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,12 +9,15 @@
 </div>
 
 <div class="sidebar">
-    <%= link_to image_tag("github_5.png"), 'email' %>
-
+    <ul><%= link_to image_tag("github_5.png"), 'https://github.com/joshuakemp1' %></ul>
+    <ul><%= link_to image_tag("Let's_talk_button.jpg"), 'email' %></ul>
+    <ul><%= link_to image_tag("email_icon_copy_2.png"), 'email' %></ul>
+   
 </div>
 
+
 <div class="center_image">
-<%= image_tag "homeless.png"  %>
+<%= image_tag "old_homeless_man.jpg"  %>
 </div>
 
 <div class="youtube">
