playing with the html tags with google fonts

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,8 +9,8 @@
 </div>
 
 <div class="sidebar">
+    <ul><h1>Contact</h1></ul>
     <ul><%= link_to image_tag("github_5.png"), 'https://github.com/joshuakemp1' %></ul>
-    <ul><%= link_to image_tag("Let's_talk_button.jpg"), 'email' %></ul>
     <ul><%= link_to image_tag("email_icon_copy_2.png"), 'email' %></ul>
    
 </div>
