--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,6 +12,7 @@
  *= require_tree .
  */
 
+@import"fonts";
 
 
 p {
@@ -20,7 +21,7 @@ p {
     padding-left: 10%;
 }
 
-h1,h2,h3,h4,h5,h6 {
+h2,h3,h4,h5,h6 {
     text-align: center;
 
 }
@@ -36,11 +37,15 @@ div.sidebar_2 {
 
 div.sidebar {
     float:right;
-    min-width: 250px;
+    min-width: 200px;
     height: 600px;
       img {
        float:right;
-       padding-right: 20px;
+       padding-right: 40px;
+      h1  {
+
+
+      }  
    }
 }
 
