changing fonts to Trocchi

--- a/app/assets/stylesheets/fonts.css.scss
+++ b/app/assets/stylesheets/fonts.css.scss
@@ -1,11 +1,10 @@
 // copied from
-// http://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister
+// http://www.google.com/fonts#UsePlace:use/Collection:Trocchi
 // and dropped in here to make the asset pipeline happy
 p, h1,h2,h3,h4,h5,h6,a,input {
-    font-family: "Love Ya Like A Sister";
+    font-family: "Trocchi";
     font-style: normal;
     font-weight: 400;
-    src: local("Love Ya Like A Sister Regular"), local("LoveYaLikeASister-Regular"), url("http://themes.googleusercontent.com/static/fonts/loveyalikeasister/v4/LzkxWS-af0Br2Sk_YgSJYySvQ-6j8YIoWm7ju43Xw-2glnMp3_3A8V8Ai8YosRtX.woff") format("woff");
 }
 
 
