--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,7 +12,6 @@
  *= require_tree .
  */
 
-@import"fonts";
 
 
 p {
@@ -36,6 +35,7 @@ div.sidebar_2 {
 
 
 div.sidebar {
+    padding-top: 0px;
     float:right;
     min-width: 200px;
     height: 600px;
@@ -56,6 +56,7 @@ div.sidebar {
       
 div.youtube {
     text-align: center;
+    padding-top: 30px;
 
 
 }
