--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <p>I'm a self taught RoR developer with over 650+ hours of learning/studying, I want to get hired as a Junior RoR developer please share, retweet, pull strings to help make this happen.</p>
-<p></p>
+<br></br>
+<br></br>
 
-<h3>Please don't let it come to this:-)</h3>
 
 
 <div class="sidebar_2">
@@ -10,20 +10,32 @@
 
 <div class="sidebar">
     <ul><h1>Contact</h1></ul>
+    <ul><%= link_to image_tag("cool_email.jpg"), 'email' %></ul>
+
+    <ul><%= link_to image_tag("blogger_tie_copy.png"), 'http://joshuakemp.blogspot.com/' %></ul>
+    <ul><%= link_to image_tag("google_images.jpg"), 'https://plus.google.com/u/0/106300667835431231840/posts' %></ul>
     <ul><%= link_to image_tag("github_5.png"), 'https://github.com/joshuakemp1' %></ul>
-    <ul><%= link_to image_tag("email_icon_copy_2.png"), 'email' %></ul>
+   
+    <ul><%= link_to image_tag("twitter4_real.jpg"), 'https://twitter.com/Joshuakemp01' %></ul>
    
 </div>
 
+
+<div class="youtube">
+<span style="background-color:#fdeee0;">    
+<iframe width="540" height="350" title="YouTube video player" src="http://www.youtube.com/embed/Ilea6Pi7ZK4?showinfo=0" frameborder="0" allowfullscreen></iframe>
+</div>
+<br></br>
+
+
+
+<h3>Please don't let it come to this:-)</h3>
 
 <div class="center_image">
 <%= image_tag "old_homeless_man.jpg"  %>
 </div>
 
-<div class="youtube">
-<span style="background-color:#fdeee0;">    
-<iframe width="460" height="289" title="YouTube video player" src="http://www.youtube.com/embed/Ilea6Pi7ZK4?showinfo=0" frameborder="0" allowfullscreen></iframe>
-</div>
+
 
 
 <h4>Come on seriously help me out before I get desperate and I'll love you forever :-)</h4>
