adding images, and moving around the css for the home and about pages

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,26 @@
-<h1>Josh's Bio:</h1>
-here's what I've done:
+<p>From Blacksmith to RoR Developer</p>
+
+
+
+
+
+<div class="sidebar_2">
+
+</div>
+
+<div class="sidebar_about">
+    <ul><h1>Contact</h1></ul>
+    <ul><%= link_to image_tag("cool_email.jpg"), 'email' %></ul>
+
+    <ul><%= link_to image_tag("blogger_tie_copy.png"), 'http://joshuakemp.blogspot.com/' %></ul>
+    <ul><%= link_to image_tag("google_images.jpg"), 'https://plus.google.com/u/0/106300667835431231840/posts' %></ul>
+    <ul><%= link_to image_tag("github_5.png"), 'https://github.com/joshuakemp1' %></ul>
+   
+    <ul><%= link_to image_tag("twitter4_real.jpg"), 'https://twitter.com/Joshuakemp01' %></ul>
+   
+</div>
+
+
+<div class="center_image_about">
+<%= image_tag "ElishaTimeline.jpg"  %>
+</div>
