--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,5 @@
 <p>I'm a self taught RoR developer with over 650+ hours of learning/studying, I want to get hired as a Junior RoR developer please share, retweet, pull strings to help make this happen.</p>
 <br></br>
-<br></br>
 
 
 
@@ -12,20 +11,28 @@
     <ul><h1>Contact</h1></ul>
     <ul><%= link_to image_tag("cool_email.jpg"), 'email' %></ul>
 
-    <ul><%= link_to image_tag("blogger_tie_copy.png"), 'http://joshuakemp.blogspot.com/' %></ul>
+    
     <ul><%= link_to image_tag("google_images.jpg"), 'https://plus.google.com/u/0/106300667835431231840/posts' %></ul>
-    <ul><%= link_to image_tag("github_5.png"), 'https://github.com/joshuakemp1' %></ul>
-   
+
+
+    <ul><%= link_to image_tag("blogger_tie_copy.png"), 'http://joshuakemp.blogspot.com/' %></ul>
+
     <ul><%= link_to image_tag("twitter4_real.jpg"), 'https://twitter.com/Joshuakemp01' %></ul>
+
+     <ul><%= link_to image_tag("ironman_github.jpg"), 'https://github.com/joshuakemp1' %></ul>
+   
+   
+     
    
 </div>
 
 
 <div class="youtube">
-<span style="background-color:#fdeee0;">    
-<iframe width="540" height="350" title="YouTube video player" src="http://www.youtube.com/embed/Ilea6Pi7ZK4?showinfo=0" frameborder="0" allowfullscreen></iframe>
+<span style="background-color:#fdeee0;"> 
+<iframe width="560" height="315" src="http://www.youtube.com/embed/KjdHgzOVvVw?showinfo=0" frameborder="0" allowfullscreen></iframe>
 </div>
 <br></br>
+
 
 
 
