--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<p>I'm a self taught RoR developer with over 650+ hours of learning/studying, I want to get hired as a Junior RoR developer please share, retweet, pull strings to help make this happen.</p>
+<p>I'm a self taught RoR developer with over 650+ hours of learning/studying, I want to get hired as a Junior RoR developer please share, retweet, pull some strings to help make this happen.</p>
 <br></br>
 
 
@@ -34,18 +34,22 @@
 <br></br>
 
 
+<div class="arrow_text">
+<%= "Please don't let it come to this!" %><%=image_tag("arrow_copy.jpg")%>
+</div>
 
 
-<h3>Please don't let it come to this:-)</h3>
 
-<div class="center_image">
+
+
+<div class="home_center_image">
 <%= image_tag "old_homeless_man.jpg"  %>
 </div>
 
 
 
 
-<h4>Come on seriously help me out before I get desperate and I'll love you forever :-)</h4>
+<h4>Come on seriously help me out before I get desperate... I'll love you forever  :-)</h4>
 
 
 
