adding images, and tweaking the look of the home and about page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,7 +37,22 @@ div.sidebar_2 {
 div.sidebar {
     float:right;
     min-width: 200px;
-    height: 600px;
+    height: 900px;
+      img {
+       float:right;
+       padding-right: 40px;
+      h1  {
+
+
+      }  
+   }
+}
+
+
+div.sidebar_about {
+    float:right;
+    min-width: 200px;
+    height: 900px;
       img {
        float:right;
        padding-right: 40px;
@@ -53,21 +68,35 @@ div.sidebar {
 
 
 
+
     
       
 div.youtube {
     text-align: center;
     padding-top: 35px;
-    padding-bottom: 100px;
-
 
 }
 
 
 
-div.center_image{
-    margin-left: auto;
-    margin-right: auto;
+div.resume_center_image_1{
+    text-align: center;
+    padding-bottom: 100px;
+    img {
+        border-radius: 20px;
+    }
+     }
+
+ div.resume_center_image_2{
+    text-align: center;
+    padding-bottom: 100px;
+    img {
+        border-radius: 20px;
+    }
+     }
+
+ div.resume_center_image_3{
+    text-align: center;
     padding-bottom: 100px;
     img {
         border-radius: 20px;
@@ -80,8 +109,18 @@ div.home_center_image{
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 100px;
-    padding-left: 300px;
-    pa
+    padding-left: 235px;
+    img {
+        border-radius: 20px;
+    }
+     }
+
+
+div.center_image_about{
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 100px;
+    padding-left: 235px;
     img {
         border-radius: 20px;
     }
@@ -127,7 +166,7 @@ body {
     color:green;
  }
 
-#inner_self {
+#resume_text {
     padding-left: 100px;
     padding-right: 100px;
     a {
