--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -22,5 +22,6 @@
 
 
 <div class="center_image_about">
-<%= image_tag "ElishaTimeline.jpg"  %>
+<%= image_tag "boys.jpg"  %><%= image_tag "sexy_wife.jpg"  %>
 </div>
+
