--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<p>I'm a self taught RoR developer with over 650+ hours of learning/studying, I want to get hired as a Junior RoR developer please share, retweet, pull some strings to help make this happen.</p>
+<p>I'm a self taught RoR developer with over 650+ hours of learning/studying, I want to get hired as a Junior RoR developer please share and retweet, to help make this happen.</p>
 <br></br>
 
 
@@ -43,13 +43,13 @@
 
 
 <div class="home_center_image">
-<%= image_tag "old_homeless_man.jpg"  %>
+<%= image_tag "josh_homeless.jpg"  %>
 </div>
 
 
 
 
-<h4>Come on seriously help me out before I get desperate... I'll love you forever  :-)</h4>
+<h4>...Come on seriously help me out before I get desperate... I'll love you forever  :-)</h4>
 
 
 
