--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -2,12 +2,19 @@
 <br></br>
 <h2>Here's a few projects I've worked on or made entirely from stractch:</h2>
 
-<div class="center_image">
+<div class="resume_center_image_1">
 <%= image_tag("save_the_tails.jpg",{width: 280}) %>
-<%= link_to image_tag("wellspringlawn_resume.jpg",{width: 260}), "http://wellspringlawn.com"  %>
-<%= link_to image_tag("joshua_kemp_site.jpg",{width: 320}), "http://0.0.0.0:3000/"  %>
 </div>
-<div id="inner_self">
+
+<div class="resume_center_image_2">
+<%= link_to image_tag("wellspringlawn_resume.jpg",{width: 260}), "http://wellspringlawn.com"  %>
+</div>
+
+<div class="resume_center_image_3">
+<%= link_to image_tag("resume_pic.png",{width: 320}), "http://0.0.0.0:3000/"  %>
+</div>
+
+<div id="resume_text">
 <h4>This site uses Flickr's api using the FlickRaw gem, so that the site can be updated from the field by just taking a photo using the Flickr mobile app and then clicking upload to send the image to the "Portfolio" page of the site.</h4>
 
 <h4>The site also has a "Get an Estimate Form" that when filled out sends all the uses information to Wellspring Lawn's owner.</h4>
