generating the mailer to send me notices when contact form is filled out

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,17 +9,17 @@
 
 <div class="sidebar">
     <ul><h1>Contact</h1></ul>
-    <ul><%= link_to image_tag("cool_email.jpg"), 'email' %></ul>
+    <ul><%= link_to image_tag("cool_email.jpg", alt: "Let's Talk!"), 'email' %></ul>
 
     
-    <ul><%= link_to image_tag("google_images.jpg"), 'https://plus.google.com/u/0/106300667835431231840/posts' %></ul>
+    <ul><%= link_to image_tag("google_images.jpg", alt: "Google +"), 'https://plus.google.com/u/0/106300667835431231840/posts' %></ul>
 
 
-    <ul><%= link_to image_tag("blogger_tie_copy.png"), 'http://joshuakemp.blogspot.com/' %></ul>
+    <ul><%= link_to image_tag("blogger_tie_copy.png", alt: "My Blog"), 'http://joshuakemp.blogspot.com/' %></ul>
 
-    <ul><%= link_to image_tag("twitter4_real.jpg"), 'https://twitter.com/Joshuakemp01' %></ul>
+    <ul><%= link_to image_tag("twitter4_real.jpg", alt: "Follow me on Twitter"), 'https://twitter.com/Joshuakemp01' %></ul>
 
-     <ul><%= link_to image_tag("ironman_github.jpg"), 'https://github.com/joshuakemp1' %></ul>
+     <ul><%= link_to image_tag("ironman_github.jpg",alt: "My Github Repos"), 'https://github.com/joshuakemp1' %></ul>
    
    
      
@@ -47,9 +47,8 @@
 </div>
 
 
-
-
+<div class="h4_home_text">
 <h4>...Come on seriously help me out before I get desperate... I'll love you forever  :-)</h4>
-
+</div>
 
 
