--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,14 +37,14 @@ div.sidebar_2 {
 div.sidebar {
     float:right;
     min-width: 200px;
-    height: 900px;
+    height: 1000px;
       img {
        float:right;
        padding-right: 40px;
       h1  {
 
 
-      }  
+      }
    }
 }
 
@@ -108,7 +108,7 @@ div.resume_center_image_1{
 div.home_center_image{
     margin-left: auto;
     margin-right: auto;
-    padding-bottom: 100px;
+    padding-bottom: 40px;
     padding-left: 235px;
     img {
         border-radius: 20px;
@@ -122,6 +122,7 @@ div.center_image_about{
     padding-bottom: 100px;
     padding-left: 235px;
     img {
+        
         border-radius: 20px;
     }
      }
@@ -141,7 +142,11 @@ padding-left: 350px;
  }
 
 
+div.h4_home_text {
+     text-align: center;
+     padding-bottom: 30px;
 
+}
 
 
 #container {
