fixing css rendering issue on heroku server

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -64,13 +64,6 @@ div.sidebar_about {
 }
 
 
-
-
-
-
-
-    
-      
 div.youtube {
     text-align: center;
     padding-top: 35px;
@@ -110,6 +103,8 @@ div.home_center_image{
     padding-bottom: 40px;
     padding-left: 235px;
     img {
+        margin-right: auto;
+        margin-left: auto;
         border-radius: 20px;
     }
      }
