tweaking alignment css

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -99,9 +99,8 @@ div.resume_center_image_1{
 
 
 div.home_center_image{
-    margin-right: auto;
-    margin-left: auto;
-    padding-bottom: 40px;
+   text-align: center;
+    padding-top: 35px;
    
     img {
 
