--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -123,9 +123,7 @@ div.center_image_about{
 
 
  div.arrow_text{
-margin-left: auto;
-margin-right: auto;
-padding-left: 350px;
+text-align: auto;
 
    img { 
     margin-bottom: 15px;
