--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -123,7 +123,9 @@ div.center_image_about{
 
 
  div.arrow_text{
-text-align: auto;
+margin-right: auto;
+margin-left: auto;
+text-align: center;
 
    img { 
    
