centering h4 text and image

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -22,6 +22,8 @@
 
 
 <div class="center_image_about">
-<%= image_tag "boys.jpg"  %><%= image_tag "sexy_wife.jpg"  %>
-</div>
+<%= image_tag "boys.jpg"  %>
 
+<div class="center_image_about">
+<%= image_tag "sexy_wife.jpg"  %>
+</div>
