--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -35,7 +35,11 @@
 
 
 <div class="arrow_text">
-<%= "Please don't let it come to this!" %><%=image_tag("arrow_copy.jpg")%>
+<%= "Please don't let it come to this!" %>
+</div>
+
+<div class="arrow_text">
+<%=image_tag("arrow_copy.jpg")%>
 </div>
 
 
