--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -127,10 +127,12 @@ margin-right: auto;
 margin-left: auto;
 text-align: center;
 
-   img { 
-   
-  
-}
+ }
+
+ div.img {
+  margin-right: auto;
+  margin-left: auto; 
+  text-align: center;
  }
 
 
