fixed email verification error, cleaning up the 'let's talk' look

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -21,9 +21,9 @@
 </div>
 
 
-<div class="center_image_about">
+<div class="center_image_about_1">
 <%= image_tag "boys.jpg"  %>
 
-<div class="center_image_about">
+<div class="center_image_about_2">
 <%= image_tag "sexy_wife.jpg"  %>
 </div>
