--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -109,7 +109,7 @@ div.home_center_image{
      }
 
 
-div.center_image_about{
+div.center_image_about_1{
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 100px;
@@ -120,6 +120,18 @@ div.center_image_about{
     }
      }
 
+
+
+div.center_image_about_2{
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 100px;
+    padding-left: 235px;
+    img {
+        
+        border-radius: 20px;
+    }
+     }
 
 
  div.arrow_text{
