--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="align_form">
 <%= form_for(@email) do |f| %>
   <% if @email.errors.any? %>
     <div id="error_explanation">
@@ -26,4 +27,5 @@
   <div class="actions">
     <%= f.submit %>
   </div>
+</div>
 <% end %>
