--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -25,7 +25,7 @@
     <%= f.text_area :message %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Submit" %>
   </div>
 </div>
 <% end %>
