changing the fonts for the contact form

--- a/app/assets/stylesheets/fonts.css.scss
+++ b/app/assets/stylesheets/fonts.css.scss
@@ -1,7 +1,7 @@
 // copied from
 // http://www.google.com/fonts#UsePlace:use/Collection:Trocchi
 // and dropped in here to make the asset pipeline happy
-p, h1,h2,h3,h4,h5,h6,a,input,div.center_image_arrow,div.arrow_text {
+p, h1,h2,h3,h4,h5,h6,a,input,div.center_image_arrow,div.arrow_text,div.align_josh_name,div.align_form {
     font-family: "Trocchi";
     font-style: normal;
     font-weight: 400;
