adding an image of ian to the about page, working on the about page styling

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,11 +1,6 @@
-<p>From Blacksmith to RoR Developer</p>
 
-
-
-
-
-<div class="sidebar_2">
-
+<div class="h3_about">
+<h3>From Blacksmith to RoR Developer</h3>
 </div>
 
 <div class="sidebar_about">
@@ -24,6 +19,22 @@
 <div class="center_image_about_1">
 <%= image_tag "boys.jpg"  %>
 
+
+<div class="p_resume">
+<p> Josh is 28 years old has been self employed for the past 7.5 years. Since June 2012, Josh knew that he wanted to one day be a web developer, after playing around with C# and the .Net framework, Josh finally found his passion, RoR, for the past 7 months he has been sold out to learning RoR and related technolgies. In the past 7 months Josh has averaged over 21 hours per week studying, attending local meetups, and pair programming. All while working full time supporting his wife and 2 boys. If you could descibe Josh in just one word, it would be "passion". </p>
+</div>
+
 <div class="center_image_about_2">
 <%= image_tag "sexy_wife.jpg"  %>
 </div>
+
+<p>Josh is so grateful to be married to his beautiful, supportive wife, who has been a constant support throughout the entire "Learning Journey". When not shoeing horses or coding, Josh will usually be found playing with his 2 little guys 3.5 year old "Ben" and 17 month old "Ian".</p>
+
+<div class="center_image_about_3">
+<%= image_tag "ian.jpg"  %>
+</div>
+
+
+
+
+
