--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -118,30 +118,60 @@ div.home_center_image{
      }
 
 
+
+div.p_resume {
+  text-align: center;
+}
+
+
+div.h3_about {
+  text-align: center;
+  padding-bottom: 20px;
+}
+
+
+
 div.center_image_about_1{
     margin-left: auto;
     margin-right: auto;
-    padding-bottom: 100px;
-    padding-left: 235px;
     img {
-        
-        border-radius: 20px;
+        padding-left: 2%;
+        border-radius-top: 20px;
+        border-radius-right:20px;
+        border-radius-bottom: 20px;
+        border-radious-top: 20px;
+      
+
     }
      }
 
 
 
 div.center_image_about_2{
-    margin-left: auto;
+    margin-left: 25%;
     margin-right: auto;
-    padding-bottom: 100px;
-    padding-left: 235px;
+   
     img {
         
         border-radius: 20px;
     }
      }
 
+
+div.center_image_about_3{
+    margin-left: 55%;
+    margin-right: auto;
+    img {
+        
+        border-radius: 20px;
+    }
+     }
+
+
+#footer {
+  margin-left: auto;
+  margin-right: auto;
+}
 
  div.arrow_text{
 margin-right: auto;
