playing with the css on the resume page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -42,6 +42,16 @@ div.sidebar_2 {
 
 }
 
+div.sidebar_3 {
+    float:right;
+    min-width: 185px;
+    height: 1000px;
+
+}
+
+
+
+
 
 div.sidebar {
     float:right;
@@ -123,6 +133,11 @@ div.p_resume {
   text-align: center;
 }
 
+
+div.resume_wrapper {
+  margin-right: 90%;
+  margin-left: 80%;
+}
 
 div.h3_about {
   text-align: center;
