--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -2,33 +2,45 @@
 <br></br>
 <h2>Here's a few projects I've worked on or made entirely from stractch:</h2>
 
+<div class="resume_wrapper">
+</div>
+
+
+<div class="sidebar_2">
+
+</div>
+
+
+<div class="sidebar_3">
+
+</div>
+
 <div class="resume_center_image_1">
 <%= image_tag("save_the_tails.jpg",{width: 280}) %>
 </div>
 
+
+<h4>A website made with David Bock, @bokmann, Jason Wieranga @jwieringa and myself. Save the Tails is a pet rescue web application.</h4>
+
 <div class="resume_center_image_2">
 <%= link_to image_tag("wellspringlawn_resume.jpg",{width: 260}), "http://wellspringlawn.com"  %>
 </div>
+
+<h4>This site uses Flickr's api using the FlickRaw gem, so that the site can be updated from the field by just taking a photo using the Flickr mobile app and then clicking upload to send the image to the "Portfolio" page of the site.</h4>
+
+<h4>The site also has a "Get an Estimate Form" that when filled out sends all the uses information to Wellspring Lawn's owner.</h4>
 
 <div class="resume_center_image_3">
 <%= link_to image_tag("resume_pic.png",{width: 320}), "http://0.0.0.0:3000/"  %>
 </div>
 
 <div id="resume_text">
-<h4>This site uses Flickr's api using the FlickRaw gem, so that the site can be updated from the field by just taking a photo using the Flickr mobile app and then clicking upload to send the image to the "Portfolio" page of the site.</h4>
-
-<h4>The site also has a "Get an Estimate Form" that when filled out sends all the uses information to Wellspring Lawn's owner.</h4>
-
-<%= link_to "Save The Tails Website", "http://www.savethetails.org/" %>
-
-<h4>A website made with David Bock, Jason Wieranga and myself. Save the Tails is a pet rescue web application.</h4>
-
-<%= link_to "Joshuakemp.net", "http://www.joshuakemp.net/" %>
+</div>
 
 <h4>This site, my online portfolio page is made by me.</h4>
 
 <%= link_to "Github", "https://github.com/joshuakemp1/" %>
 
 <h4>This my personal page for all the code I have committed to Github over the past year, check it out and see what other things I've done.</h4>
-</div>
+
 
