--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -16,11 +16,11 @@
 </div>
 
 <div class="resume_center_image_1">
-<%= image_tag("save_the_tails.jpg",{width: 280}) %>
+<%= image_tag("save.png",{width: 280}) %>
 </div>
 
 
-<h4>A website made with David Bock, @bokmann, Jason Wieranga @jwieringa and myself. Save the Tails is a pet rescue web application.</h4>
+<h4>A website made with @bokmann, @jwieringa and myself. Save the Tails is a pet rescue web application.</h4>
 
 <div class="resume_center_image_2">
 <%= link_to image_tag("wellspringlawn_resume.jpg",{width: 260}), "http://wellspringlawn.com"  %>
