--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -45,7 +45,7 @@ div.sidebar_2 {
 div.sidebar_3 {
     float:right;
     min-width: 185px;
-    height: 1000px;
+    height: 900px;
 
 }
 
@@ -109,7 +109,7 @@ div.resume_center_image_1{
 
  div.resume_center_image_3{
     text-align: center;
-    padding-bottom: 30px;
+    padding-top: 30px;
     img {
         border-radius: 20px;
     }
@@ -145,14 +145,21 @@ div.h3_about {
 }
 
 
+div.h3_resume {
+  text-align: center;
+}
+
+
 
 div.center_image_about_1{
-    padding-left: 10px;
     margin-left: auto;
     margin-right: auto;
     img {
+        padding-left: 5px;
+        padding-right: 5px;
         border-radius: 10px;
-        
+
+
 
       
 
@@ -166,7 +173,7 @@ div.center_image_about_2{
     margin-right: auto;
    
     img { 
-        border: 3px solid #525252; 
+
         border-radius: 20px;
     }
      }
@@ -179,7 +186,6 @@ div.center_image_about_3{
 
     img {
 
-        border: 3.5px solid #525252; 
         border-radius: 20px;
     }
      }
