--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -1,6 +1,9 @@
-<p>Resume</p>
+<div class="h3_resume">
+<h3>Resume</h3>
+</div>
+
 <br></br>
-<h2>Here's a few projects I've worked on or made entirely from stractch:</h2>
+<h3>Here's a few projects:</h3>
 
 <div class="resume_wrapper">
 </div>
@@ -16,14 +19,14 @@
 </div>
 
 <div class="resume_center_image_1">
-<%= image_tag("save.png",{width: 280}) %>
+<%= image_tag("save.png") %>
 </div>
 
 
-<h4>A website made with @bokmann, @jwieringa and myself. Save the Tails is a pet rescue web application.</h4>
+<h4>A website made with @bokmann, @jwieringa and myself. Save the Tails is a pet rescue web application. The site is not hosted yet, so there is no link to click and see it.</h4>
 
 <div class="resume_center_image_2">
-<%= link_to image_tag("wellspringlawn_resume.jpg",{width: 260}), "http://wellspringlawn.com"  %>
+<%= link_to image_tag("6 AM.jpg"), "http://wellspringlawn.com"  %>
 </div>
 
 <h4>This site uses Flickr's api using the FlickRaw gem, so that the site can be updated from the field by just taking a photo using the Flickr mobile app and then clicking upload to send the image to the "Portfolio" page of the site.</h4>
@@ -31,16 +34,21 @@
 <h4>The site also has a "Get an Estimate Form" that when filled out sends all the uses information to Wellspring Lawn's owner.</h4>
 
 <div class="resume_center_image_3">
-<%= link_to image_tag("resume_pic.png",{width: 320}), "http://0.0.0.0:3000/"  %>
+<%= link_to image_tag("resume_pic.png",{width: 280}), "http://0.0.0.0:3000/"  %>
 </div>
+
+<h4>This site my online portfolio is made by me.</h4>
+
+<div class="resume_center_image_3">
+<%= link_to image_tag("ironman_github_2.jpg"), "https://github.com/joshuakemp1"  %>
+</div>
+
+
 
 <div id="resume_text">
 </div>
 
-<h4>This site, my online portfolio page is made by me.</h4>
 
-<%= link_to "Github", "https://github.com/joshuakemp1/" %>
-
-<h4>This my personal page for all the code I have committed to Github over the past year, check it out and see what other things I've done.</h4>
+<h4>Check out my Github, check it out and see what other things I've done.</h4>
 
 
