finishing touches to the resume page, adding some photos, cropping

--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -9,29 +9,29 @@
 </div>
 
 
-<div class="sidebar_2">
-
-</div>
-
-
 <div class="sidebar_3">
 
 </div>
 
+
+<div class="sidebar_4">
+
+</div>
+
 <div class="resume_center_image_1">
-<%= image_tag("save.png") %>
+<%= image_tag("saving_tails.png",{width: 280}) %>
 </div>
 
 
-<h4>A website made with @bokmann, @jwieringa and myself. Save the Tails is a pet rescue web application. The site is not hosted yet, so there is no link to click and see it.</h4>
+<h4>A website made with David Bock, Jason Wieringa and myself. Save the Tails is a pet rescue web application. The site is not hosted yet, so there is no link to click and see it.</h4>
 
 <div class="resume_center_image_2">
-<%= link_to image_tag("6 AM.jpg"), "http://wellspringlawn.com"  %>
+<%= link_to image_tag("wellspring_resume.jpg",{width: 280}), "http://wellspringlawn.com"  %>
 </div>
 
 <h4>This site uses Flickr's api using the FlickRaw gem, so that the site can be updated from the field by just taking a photo using the Flickr mobile app and then clicking upload to send the image to the "Portfolio" page of the site.</h4>
 
-<h4>The site also has a "Get an Estimate Form" that when filled out sends all the uses information to Wellspring Lawn's owner.</h4>
+<h4>The site also has a "Get an Estimate Form" that when filled out sends all the users information to the Wellspring Lawn's owner.</h4>
 
 <div class="resume_center_image_3">
 <%= link_to image_tag("resume_pic.png",{width: 280}), "http://0.0.0.0:3000/"  %>
@@ -40,7 +40,7 @@
 <h4>This site my online portfolio is made by me.</h4>
 
 <div class="resume_center_image_3">
-<%= link_to image_tag("ironman_github_2.jpg"), "https://github.com/joshuakemp1"  %>
+<%= link_to image_tag("github_resume.jpg"), "https://github.com/joshuakemp1"  %>
 </div>
 
 
