--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -44,11 +44,18 @@ div.sidebar_2 {
 
 div.sidebar_3 {
     float:right;
-    min-width: 185px;
-    height: 900px;
+    min-width: 250px;
+    height: 970px;
 
 }
 
+
+div.sidebar_4 {
+    float:left;
+    min-width: 250px;
+    height: 970px;
+
+}
 
 
 
