adding a bullet list to the resume page'

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,6 +26,17 @@ h2,h3,h4,h5,h6 {
 }
 
 
+div.elisha_notes {
+  text-align: center;
+     li { 
+   list-style: square;
+
+
+     }
+
+}
+
+
 div.align_josh_name {
   text-align: center;
 }
@@ -45,7 +56,7 @@ div.sidebar_2 {
 div.sidebar_3 {
     float:right;
     min-width: 250px;
-    height: 970px;
+    height: 1100px;
 
 }
 
@@ -53,7 +64,7 @@ div.sidebar_3 {
 div.sidebar_4 {
     float:left;
     min-width: 250px;
-    height: 970px;
+    height: 1100px;
 
 }
 
