--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -37,14 +37,24 @@
 <%= link_to image_tag("resume_pic.png",{width: 280}), "http://0.0.0.0:3000/"  %>
 </div>
 
+
+
 <h4>This site my online portfolio is made by me.</h4>
+
+<div class="elisha_notes">
+<li>  Completed Michael Hartl Rails Tutorial</li>
+<li> Completed edX Berkley's 169.1x & 169.2x SaaS course </li>
+<li>  Completed "Learn to Program" book & exercises by Chris Pine</li>
+<li>  Completed "Learn Ruby the hard way" book and exercises by Zed Shaw</li>
+<li>  Completed "Learn the command line the hard way" book and exercises by Zed Shaw</li>
+<li>  Attended over 20 local Ruby meetups</li>
+<li>  Pair Programmed with over 10 different developers</li>
+<li>  Completed Mattan Griffel's "One month Rails"</li>
+</div>
 
 <div class="resume_center_image_3">
 <%= link_to image_tag("github_resume.jpg"), "https://github.com/joshuakemp1"  %>
 </div>
-
-
-
 <div id="resume_text">
 </div>
 
