--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -21,14 +21,14 @@
 
 
 <div class="p_resume">
-<p> Josh is 28 years old has been self employed for the past 7.5 years. Since June 2012, Josh knew that he wanted to one day be a web developer, after playing around with C# and the .Net framework, Josh finally found his passion, RoR, for the past 7 months he has been sold out to learning RoR and related technolgies. In the past 7 months Josh has averaged over 21 hours per week studying, attending local meetups, and pair programming. All while working full time supporting his wife and 2 boys. If you could descibe Josh in just one word, it would be "passion". </p>
+<p> Josh is 28 years old has been self employed for the past 7.5 years. Since June 2012, He knew that he wanted to one day be a web developer after playing around with C# and the .Net framework. Josh finally found his passion, RoR, and for the past 7 months he has been sold out to learning RoR and related technologies. In the past 7 months he has averaged over 21 hours per week studying, attending local meetups and pair programming. All while working full time as a Farrier (Shoeing horses), supporting his wife and 2 boys. If you could descibe him in just one word, it would be "passion". </p>
 </div>
 
 <div class="center_image_about_2">
 <%= image_tag "sexy_wife.jpg"  %>
 </div>
 
-<p>Josh is so grateful to be married to his beautiful, supportive wife, who has been a constant support throughout the entire "Learning Journey". When not shoeing horses or coding, Josh will usually be found playing with his 2 little guys 3.5 year old "Ben" and 17 month old "Ian".</p>
+<p>Josh is so grateful to be married to his beautiful, supportive wife who has been a constant support throughout the entire "Learning Journey". When not shoeing horses or coding he will usually be found playing with his 2 little guys, Benjamin and Ian who are 3.5 years old and 17 months. </p>
 
 <div class="center_image_about_3">
 <%= image_tag "ian.jpg"  %>
