aligning the 'resume' page bullet points a little better

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,12 +27,9 @@ h2,h3,h4,h5,h6 {
 
 
 div.elisha_notes {
+  width:300px;
+  margin:0 auto;
   text-align: center;
-     li { 
-   list-style: square;
-
-
-     }
 
 }
 
