--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -40,7 +40,10 @@
 
 
 <h4>This site my online portfolio is made by me.</h4>
+<br></br>
 
+
+<h3>More Relevant RoR Experience:</h3>
 <div class="elisha_notes">
 <li>  Completed Michael Hartl Rails Tutorial</li>
 <li> Completed edX Berkley's 169.1x & 169.2x SaaS course </li>
