adding links to jason and davids twitter accounts

--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -23,7 +23,7 @@
 </div>
 
 
-<h4>A website made with David Bock, Jason Wieringa and myself. Save the Tails is a pet rescue web application. The site is not hosted yet, so there is no link to click and see it.</h4>
+<h4>A website made with <%= link_to("David Bock", "https://twitter.com/bokmann") %>,<%= link_to("Jason Wieringa", "https://twitter.com/jwieringa") %> and myself. Save the Tails is a pet rescue web application. The site is not hosted yet, so there is no link to click and see it.</h4>
 <br></br>
 
 <div class="resume_center_image_2">
