--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,7 +27,7 @@
 </div>
 
 
-<div class="youtube">
+<div id="youtube">
 <span style="background-color:#fdeee0;"> 
 <iframe width="560" height="315" src="http://www.youtube.com/embed/KjdHgzOVvVw?showinfo=0" frameborder="0" allowfullscreen></iframe>
 </div>
@@ -49,6 +49,7 @@
 <div class="home_center_image">
 <%= image_tag "josh_homeless.jpg"  %>
 </div>
+
 
 
 <div class="h4_home_text">
