moving the youtube video back to center

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,8 +26,7 @@
    
 </div>
 
-
-<div id="youtube">
+<div class="home_center_image">
 <span style="background-color:#fdeee0;"> 
 <iframe width="560" height="315" src="http://www.youtube.com/embed/KjdHgzOVvVw?showinfo=0" frameborder="0" allowfullscreen></iframe>
 </div>
