--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,9 +26,9 @@
    
 </div>
 
-<div class="home_center_image">
-<span style="background-color:#fdeee0;"> 
-<iframe width="560" height="315" src="http://www.youtube.com/embed/KjdHgzOVvVw?showinfo=0" frameborder="0" allowfullscreen></iframe>
+<div class="home_center_youtube">
+<span style="background-color:#fff;"> 
+<iframe id="youtube_shadow" width="610" height="345" src="http://www.youtube.com/embed/KjdHgzOVvVw?showinfo=0" frameborder="0" allowfullscreen></iframe>
 </div>
 <br></br>
 
