--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -146,8 +146,9 @@ div.home_center_youtube{
 
 iframe#youtube_shadow {
     float: center;
+     -moz-box-shadow:    3px 3px 5px 6px black;
+    -webkit-box-shadow: 3px 3px 5px 6px black;
     box-shadow:    3px 3px 5px 6px black;
-    border-radius: 50px;
      }
 }   
 
