fixing the link url in the resume page to show properly

--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -35,7 +35,7 @@
 <h4>The site also has a "Get an Estimate Form" that when filled out sends all the users information to the Wellspring Lawn's owner.</h4>
 
 <div class="resume_center_image_3">
-<%= link_to image_tag("resume_pic.png",{width: 280}), "http://joshuakemp-website.herokuapp.com/"  %>
+<%= link_to image_tag("resume_pic.png",{width: 280}), "http://joshuakemp.net/"  %>
 </div>
 
 
