adding webkit border radius to fix the browser rendering issues

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -149,7 +149,7 @@ iframe#youtube_shadow {
      -moz-box-shadow:    3px 3px 5px 6px black;
     -webkit-box-shadow: 3px 3px 5px 6px black;
     box-shadow:    3px 3px 5px 6px black;
-    border-radius: 50px;
+    -webkit-border-radius: 50px;
      }
 }   
 
