--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,23 +7,20 @@
 
 </div>
 
-<div class="sidebar">
-    <ul><h1>Contact</h1></ul>
-    <ul><%= link_to image_tag("cool_email.jpg", alt: "Let's Talk!"), 'email' %></ul>
-
-    
-    <ul><%= link_to image_tag("google_images.jpg", alt: "Google +"), 'https://plus.google.com/u/0/106300667835431231840/posts' %></ul>
-
-
-    <ul><%= link_to image_tag("blogger_tie_copy.png", alt: "My Blog"), 'http://joshuakemp.blogspot.com/' %></ul>
-
-    <ul><%= link_to image_tag("twitter4_real.jpg", alt: "Follow me on Twitter"), 'https://twitter.com/Joshuakemp01' %></ul>
-
-     <ul><%= link_to image_tag("ironman_github.jpg",alt: "My Github Repos"), 'https://github.com/joshuakemp1' %></ul>
-   
-   
-     
-   
+<div class="sidebar"> 
+    <ul>
+        <li><h1>Contact</h1></li>
+        <li><%=link_to image_tag("cool_email.jpg", 
+                alt: "Let's Talk!"), 'email' %></li>
+        <li><%= link_to image_tag("google_images.jpg", 
+                alt: "Google +"), 'https://plus.google.com/u/0/106300667835431231840/posts' %></li>
+        <li><%= link_to image_tag("blogger_tie_copy.png",
+                alt: "My Blog"), 'http://joshuakemp.blogspot.com/' %></li>
+        <li><%= link_to image_tag("twitter4_real.jpg", 
+                alt: "Follow me on Twitter"), 'https://twitter.com/Joshuakemp01' %></li> 
+        <li><%= link_to image_tag("ironman_github.jpg",
+                alt: "My Github Repos"), 'https://github.com/joshuakemp1' %></li>
+    </ul>
 </div>
 
 <div class="home_center_youtube">
