changing text that I got hired

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<p>I'm a self taught RoR developer with over 800 hours of learning/studying, I want to get hired as a Junior RoR developer please share and retweet to help make this happen.</p>
+<p>I GOT HIRED! I started my new job as a Partner Integration Specialist at ZipList on August 1st!</p>
 <br></br>
 
 
